syntax = "proto3";

package com.shadow.netty.chapter04.generate;

option java_package = "com.shadow.netty.chapter04.generate";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc GetRealNameByUsername(MyRequest) returns (MyResponse) {}

    rpc GetStudentByAge(StudentRequest) returns (stream StudentResponse) {}

    rpc GetStudentWrapperByAges(stream StudentRequest) returns (StudentResponseList) {}

    rpc BiTalk(stream StreamRequest) returns (stream StreamResponse) {}
}


message StreamRequest {
    string request_info = 1;
}

message StreamResponse {
    string response_info = 1;
}

message StudentResponseList {
    repeated StudentResponse studentResponse = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentRequest {
    int32 age = 1;
}


message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}